--- a/css/top.css
+++ b/css/top.css
@@ -52,13 +52,16 @@ swiper-slide {
   padding: 90px 5%;
 }
 .section_container {
+  width: 100%;
   background-color: rgba(255, 255, 255, 0.7960784314);
-  padding: 15% 5%;
+  padding: 7.5% 5%;
   border-radius: 8px;
 }
 .section_title {
-  font-size: 20px;
+  font-family: "Inria Sans", serif;
+  font-size: 28px;
   font-weight: 700;
+  margin: 0 0 0.5em;
 }
 
 #section01 {
@@ -87,4 +90,62 @@ swiper-slide {
 
 .about_text {
   font-size: 14px;
+}
+
+.performer_content ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+.performer_content ul li {
+  width: 50%;
+}
+
+.movie_content {
+  width: 100%;
+}
+.movie_content iframe {
+  width: 100%;
+  height: auto;
+  aspect-ratio: 16/9;
+}
+
+.map_content {
+  width: 100%;
+}
+.map_content iframe {
+  width: 100%;
+  height: auto;
+  aspect-ratio: 1/1;
+}
+
+.info_content ul {
+  width: 90%;
+  margin: 1em auto;
+}
+.info_content ul li {
+  text-align: left;
+  margin-bottom: 0.75em;
+  border-bottom: 1px solid #000;
+}
+.info_content ul li span:first-child {
+  font-weight: bold;
+}
+
+.sponcer_content ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+.sponcer_content ul li {
+  width: 50%;
+  border: 1px solid #e9e9e9;
+  aspect-ratio: 16/9;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.sponcer_content ul li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 8px;
 }
