--- a/scss/base.scss
+++ b/scss/base.scss
@@ -10,6 +10,7 @@
 }
 
 body{
+    font-family: "M PLUS Rounded 1c", serif;
     font-size: 16px;
 }
 a{
@@ -26,7 +27,12 @@ a{
 		}
 	}
 }
-
+ul{
+    padding-left: 0;
+}
+li{
+    list-style-type: none;
+}
 .pc {
 	display: none;
     @include mq-min(){
@@ -61,7 +67,7 @@ img{
     padding-bottom: 10px;
 }
 .t-mini{
-    font-size: 0.8em;
+    font-size: 0.75em;
 }
 .container{
     padding: 0 20px;
@@ -133,7 +139,7 @@ img{
     height: 100%;
     justify-content: center;
     align-items: center;
-    background-color: rgb(255, 131, 131);
+    background-color: rgba(255, 131, 131, 0.5);
     font-size: 18px;
     font-weight: 700;
 }
