--- a/scss/top.scss
+++ b/scss/top.scss
@@ -53,13 +53,16 @@ swiper-slide {
     height: 100vh;
     padding: 90px 5%;
     &_container{
+        width: 100%;
         background-color: #ffffffcb;
-        padding: 15% 5%;
+        padding: 7.5% 5%;
         border-radius: 8px;
     }
     &_title{
-        font-size: 20px;
+        font-family: "Inria Sans", serif;
+        font-size: 28px;
         font-weight: 700;
+        margin: 0 0 0.5em;
     }
 }
 
@@ -82,13 +85,79 @@ swiper-slide {
     background-color: $bg06;
 }
 
-
-// about
 .about{
     &_content{
         
     }
     &_text{
         font-size: 14px;
+    }
+}
+.performer{
+    &_content{
+        ul{
+            display: flex;
+            flex-wrap: wrap;
+            li{
+                width: 50%;
+            }
+        }
+    }
+}
+.movie{
+    &_content{
+        width: 100%;
+        iframe{
+            width: 100%;
+            height: auto;
+            aspect-ratio: 16/9;
+        }
+    }
+}
+.map{
+    &_content{
+        width: 100%;
+        iframe{
+            width: 100%;
+            height: auto;
+            aspect-ratio: 1/1;
+        }
+    }
+}
+.info{
+    &_content{
+        ul{
+            width: 90%;
+            margin: 1em auto;            
+            li{
+                text-align: left;
+                margin-bottom: 0.75em;
+                border-bottom: 1px solid #000;
+                span:first-child{
+                    font-weight: bold;
+                }
+            }
+        }
+    }    
+}
+.sponcer{
+    &_content{
+        ul{
+            display: flex;
+            flex-wrap: wrap;
+            li{
+                width: 50%;
+                border: 1px solid #e9e9e9;
+                aspect-ratio: 16 / 9;
+                object-fit: contain;
+                a{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    height: 100%;
+                    padding: 8px;
+                }
+            }
+        }
     }
 }
