--- a/css/top.css
+++ b/css/top.css
@@ -110,12 +110,13 @@ swiper-slide {
 }
 
 .map_content {
-  width: 100%;
+  width: 90%;
+  margin: 0 auto;
 }
 .map_content iframe {
   width: 100%;
   height: auto;
-  aspect-ratio: 1/1;
+  aspect-ratio: 4/3;
 }
 
 .info_content ul {
@@ -126,6 +127,12 @@ swiper-slide {
   text-align: left;
   margin-bottom: 0.75em;
   border-bottom: 1px solid #000;
+  font-size: 14px;
+}
+@media screen and (min-width: 769px) {
+  .info_content ul li {
+    font-size: 16px;
+  }
 }
 .info_content ul li span:first-child {
   font-weight: bold;
@@ -134,6 +141,13 @@ swiper-slide {
 .sponcer_content ul {
   display: flex;
   flex-wrap: wrap;
+  width: 90%;
+  margin: 0 auto;
+}
+@media screen and (min-width: 769px) {
+  .sponcer_content ul {
+    width: 100%;
+  }
 }
 .sponcer_content ul li {
   width: 50%;
