--- a/scss/top.scss
+++ b/scss/top.scss
@@ -116,11 +116,12 @@ swiper-slide {
 }
 .map{
     &_content{
-        width: 100%;
+        width: 90%;
+        margin: 0 auto;
         iframe{
             width: 100%;
             height: auto;
-            aspect-ratio: 1/1;
+            aspect-ratio: 4/3;
         }
     }
 }
@@ -133,6 +134,10 @@ swiper-slide {
                 text-align: left;
                 margin-bottom: 0.75em;
                 border-bottom: 1px solid #000;
+                font-size: 14px;
+                @include mq-min(){
+                    font-size: 16px;
+                }
                 span:first-child{
                     font-weight: bold;
                 }
@@ -145,6 +150,11 @@ swiper-slide {
         ul{
             display: flex;
             flex-wrap: wrap;
+            width: 90%;
+            margin: 0 auto;
+            @include mq-min(){
+                width: 100%;
+            }
             li{
                 width: 50%;
                 border: 1px solid #e9e9e9;
