--- a/css/top.css
+++ b/css/top.css
@@ -92,12 +92,28 @@ swiper-slide {
   font-size: 16px;
 }
 
-.performer_content ul {
-  display: flex;
-  flex-wrap: wrap;
+.performer swiper-slide {
+  display: block;
+  border: 1px solid #000;
+  border-radius: 8px;
+  background-color: #fff;
 }
-.performer_content ul li {
-  width: 50%;
+.performer_content {
+  width: 80%;
+  margin: 0 auto;
+}
+.performer_image {
+  width: 80%;
+  margin: 1em auto;
+}
+.performer_link {
+  background: linear-gradient(90deg, #4C64D3, #CF2E92, #F26939, #FFDD83);
+  color: #fff !important;
+  margin-bottom: 1em;
+  padding: 8px;
+  border-radius: 4px;
+  font-size: 0.8em;
+  font-weight: 700;
 }
 
 .movie_content {
