--- a/css/top.css
+++ b/css/top.css
@@ -51,6 +51,12 @@ swiper-slide {
   height: 100vh;
   padding: 90px 6%;
 }
+@media screen and (min-width: 769px) {
+  .section {
+    width: 100%;
+    height: 100%;
+  }
+}
 .section_container {
   width: 100%;
   background-color: rgba(255, 255, 255, 0.7960784314);
