--- a/scss/top.scss
+++ b/scss/top.scss
@@ -52,6 +52,10 @@ swiper-slide {
     width: 100vw;
     height: 100vh;
     padding: 90px 6%;
+    @include mq-min(){
+        width: 100%;
+        height: 100%;
+    }
     &_container{
         width: 100%;
         background-color: #ffffffcb;
@@ -86,9 +90,6 @@ swiper-slide {
 }
 
 .about{
-    &_content{
-        
-    }
     &_text{
         font-size: 16px;
     }
