--- a/scss/base.scss
+++ b/scss/base.scss
@@ -42,7 +42,7 @@ li{
 .sp {
 	display: block;
     @include mq-min(){
-		display: none;
+		display: none!important;
     }
 }
 .pc-inline {
@@ -93,32 +93,49 @@ img{
 .split-container{
     display: flex;
 }
-// .left-side,.right-side{
-//     @include mq-min(){
-//         width: calc( (100vw - 375px) / 2);
-//     }
-// }
+.left-side,.right-side{
+    @include mq-min(){
+        width: calc( (100vw - 375px) / 2);
+        background-color: whitesmoke;
+    }
+}
 .left-side{
     @include mq-min(){
-        width: calc( (100vw - 375px) * 3 / 4);
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
+}
+.pc-logo{
+    width: 60%;
+    height: auto;
+    margin:  auto;
+    border-radius: 16px;
 }
 .right-side{
     @include mq-min(){
-        width: calc( (100vw - 375px) / 4);
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
-.insta-list{
+.pc-link{
     display: flex;
-    flex-direction: row;
-    li{
-        width: calc(100% / 3);
-        list-style: none;
-        iframe{
-            width: 100%!important;
-        }
-    }
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    height: auto;
+    margin:  auto;
+    padding: 1em;
+    border-radius: 8px;
+    box-shadow: 0 5px 0 #ca1c30;
+    &:hover {
+        box-shadow: none;
+        transform: translateY(5px);
+      }
 }
+
+
 .center-side{
     width: 100%;
     min-height: 100vh;
@@ -134,14 +151,16 @@ img{
     bottom: 0;
     height: 80px;
 }
-.ticket-link{
+.footer-link{
     display: flex;
     width: 100%;
     height: 100%;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 131, 131, 0.8);
     box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
+}
+.ticket-link{
+    background-color: rgba(255, 131, 131, 0.8);
     &._shiny {
         position: relative;
         overflow: hidden;
